Fix contact form border radius on mobile view

--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -45,6 +45,8 @@
       transform: scale(1) translateY(100vh);
       width: 100%;
       padding: 3rem;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
     }
 
     &-content {
